plugins {
    id 'java'
    id 'application'
}

java {
    sourceCompatibility = JavaVersion.VERSION_17
    targetCompatibility = JavaVersion.VERSION_17
}

repositories {
    mavenCentral()
    jcenter() // Added jcenter repository
}

dependencies {
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
    testImplementation 'org.mockito:mockito-core:4.2.0'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.2'

    // Hibernate and HSQLDB dependencies
    implementation ('org.hsqldb:hsqldb:2.3.4')
    implementation ('org.hibernate:hibernate-entitymanager:5.2.1.Final')
    implementation ('org.hibernate:hibernate-java8:5.2.1.Final')
    implementation "javax.xml.bind:jaxb-api:2.2.11"
}

version = '1.0'

// Tasks for managing the database
task hsql(type: JavaExec) {
    main = "org.hsqldb.Server"
    classpath = sourceSets.main.runtimeClasspath
    args = ["-database.0", "${projectDir}/data/pos", "-dbname.0", "pos"]
}

task dbmanager(dependsOn: 'classes', type: JavaExec) {
    main = 'org.hsqldb.util.DatabaseManagerSwing'
    classpath = sourceSets.main.runtimeClasspath
    args = ["--user", "sa", "--url", "jdbc:hsqldb:hsql://localhost/POS"]
}

application {
    mainClassName = 'ee.ut.math.tvt.salessystem.ui.SalesSystemUI'
    applicationDefaultJvmArgs = ['--add-opens', 'java.base/java.lang=ALL-UNNAMED']
}
